--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
+  position: relative;
   text-align: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +38,367 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* =======================================
+/* 1. RESET
+/* ======================================= */
+
+html {
+  background-color: #282c34;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+* {
+  position: relative;
+  background-color: #282c34;
+  text-decoration: none;
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  border: 1px solid olive;
+}
+
+header {
+  background-color: #282c34;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+nav {
+  position: absolute;
+  background-color: transparent;
+  z-index: 100000000;
+}
+
+body {
+  background-color: #282c34;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+footer {
+  position: absolute;
+  background-color: #154097;
+  bottom: 3%;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  position: relative;
+  width: 25vw;
+  height: 7vh;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+li {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+/* =======================================
+/* 2. NAV
+/* ======================================= */
+.top-nav {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-tabs {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-social {
+  position: relative;
+  margin: 0;
+  margin-right: 2%;
+  padding: 0;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-social div {
+  margin: 0 2%;
+}
+
+.main-nav {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 0%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#MAIN-NAV .logo {
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#MAIN-NAV .hamburger {
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-nav {
+  margin: 0%;
+  padding: 0;
+  width: 80%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* =======================================
+/* 3. HOME
+/* ======================================= */
+#home {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-screen {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.designs {
+  position: absolute;
+}
+
+.first-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+}
+
+.slide-card {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.second-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+}
+
+.third-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+}
+
+.forth-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+}
+
+/* =======================================
+/* 4. AGE VERIFICATION SCREEN
+/* ======================================= */
+
+#AGE_VERTIFICATION {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.age-verification {
+  height: 90%;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.age-header {
+  height: 10%;
+  width: 100%;
+}
+
+.auth-logo {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.age-body {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.age-head-header {
+  padding: 5% 0;
+  width: 100%;
+  text-align: center;
+}
+
+.age-head-text {
+  padding: 5% 0;
+  width: 100%;
+  text-align: center;
+}
+
+.age-buttons {
+  padding: 5% 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.age-buttons .btn {
+  margin: 0 5%;
+}
+
+/* =======================================
+/* 5. GOODIES
+/* ======================================= */
+
+#GOODIES_PAGE {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#GOODIES_PAGE section {
+  position: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
