--- a/src/responsive.css
+++ b/src/responsive.css
@@ -89,6 +89,8 @@
     justify-content: space-between;
     align-items: flex-start;
     text-decoration: none;
+    position: relative;
+    left: 0;
   }
 
   .mobile-menu-footer {
@@ -133,5 +135,24 @@
   }
   #SLIDES {
     z-index: 1000;
+  }
+
+  /* GOODIES MENU */
+
+  .menu-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .menu-container .menu-card {
+  }
+  
+  #FLOWERS,
+  #CONCENTRATES,
+  #EDIBLES,
+  #GEAR {
+    position: relative;
+    width: 100%;
+    height: 100vh;
   }
 }
