--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 /* ======================================= */
 
 html {
-  background-color: #282c34;
+  background-color: rgba(245, 242, 241, 1);
   position: relative;
   width: 100%;
   height: 100vh;
@@ -56,7 +56,7 @@ html {
 
 * {
   position: relative;
-  background-color: #282c34;
+  background-color: rgba(245, 242, 241, 1);
   text-decoration: none;
   width: auto;
   height: auto;
@@ -82,7 +82,7 @@ nav {
 }
 
 body {
-  background-color: #282c34;
+  background-color: rgba(245, 242, 241, 1);
   position: relative;
   width: 100%;
   height: 100vh;
@@ -132,7 +132,8 @@ li {
 /* 2. NAV
 /* ======================================= */
 .top-nav {
-  position: relative;
+  position: absolute;
+  top: 4%;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -186,6 +187,7 @@ li {
 }
 
 #MAIN-NAV .logo {
+  background-color: #215732;
   margin: 0;
   padding: 0;
   width: 20%;
@@ -196,6 +198,7 @@ li {
 }
 
 #MAIN-NAV .hamburger {
+  background-color: #215732;
   margin: 0;
   padding: 0;
   width: 20%;
@@ -203,6 +206,12 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#MAIN-NAV .logo a {
+  background-color: #215732 !important;
+  text-decoration: none;
+  color: lavender;
 }
 
 .footer-nav {
@@ -239,6 +248,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgba(245, 242, 241, 1);
 }
 
 .designs {
@@ -257,6 +267,19 @@ li {
   justify-self: center;
 }
 
+.slides-bg {
+  position: relative;
+  background: lightgray;
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .slide-card {
   position: relative;
   width: 80%;
@@ -267,6 +290,8 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 0.4;
+  background: url(./assets/images/bg-pattern.png) 0 0;
 }
 
 .second-slide {
@@ -554,4 +579,66 @@ li {
   background-color: red;
   color: white;
   box-sizing: border-box;
+}
+
+/* =======================================
+/* 6. ABOUT PAGE
+/* ======================================= */
+
+#ABOUT_PAGE {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll;
+}
+
+#ABOUT_PAGE section {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-home {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.hero-container {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  /* flex: 1; */
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  /* -webkit-flex-wrap: wrap; */
+  overflow: hidden;
+}
+
+.about div {
+  margin: 5% 0;
+}
+
+.about .about-one {
+  margin-left: 15%;
+}
+
+.about .about-three {
+  margin-right: 15%;
 }
