--- a/src/App.css
+++ b/src/App.css
@@ -469,6 +469,8 @@ li {
   flex-direction: column;
   /* -webkit-flex-wrap: wrap; */
   overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 1px -1px 19px 5px rgb(204 199 199);
 }
 
 .menu-container .menu-card {
@@ -483,9 +485,17 @@ li {
   align-items: center;
   flex-wrap: nowrap;
   align-content: space-around;
-  background-color: red;
-  color: white;
+  background-color: #fff;
+  color: rgb(61, 61, 61);
   box-sizing: border-box;
+  border: 1px solid rgb(185, 185, 185);
+  opacity: 0.4;
+  background: url("./assets/images/Sour-Strawberry-2-min.jpeg") no-repeat fixed
+    center;
+}
+
+.menu-container .menu-card:hover {
+  opacity: 0.9;
 }
 
 #FLOWERS {
@@ -765,16 +775,122 @@ li {
   /* flex: 1; */
   flex-wrap: nowrap;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   /* -webkit-flex-wrap: wrap; */
-  overflow: hidden;
+  /* overflow: hidden; */
+  /* border-radius: 10px; */
+  /* box-shadow: 1px -1px 19px 5px rgb(204 199 199); */
+}
+
+.hero-container img {
+  border-radius: 10px;
+  box-shadow: 1px -1px 19px 5px rgb(204 199 199);
+  height: 60%;
+  width: 100%;
+}
+
+.hero-container h1 {
+  position: absolute;
+  top: 10%;
+  left: 2%;
+  font-size: 10vh;
+}
+
+.about {
+  background: linear-gradient(to right, #f4f2f1, rgb(97, 97, 97));
 }
 
 .about div {
   margin: 5% 0;
+  background: none;
 }
 
+.vid-bg {
+  background: rgb(97, 97, 97);
+  width: 100vw !important;
+  height: 100vh !important;
+  overflow: hidden;
+}
+
+.location {
+  position: relative;
+  background: rgb(32, 34, 37);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.special {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.special-bg {
+  background-image: url("https://media3.giphy.com/media/SEEZV9PrWRfVu/200.gif");
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100000000 !important;
+  background-size: cover;
+  background-color: rgb(32, 34, 37);
+  background-position: center center;
+  opacity: 0.3;
+  filter: blur(8px);
+  overflow: hidden;
+  z-index: -10000000;
+  -webkit-mask: linear-gradient(rgb(32, 34, 37), transparent);
+}
+
+.special-text {
+  position: absolute;
+  /* z-index: 10000000000000 !important; */
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(
+    to right,
+    rgb(32, 34, 37) -50%,
+    rgb(32, 34, 37) 25%,
+    rgba(32, 34, 37, 0) 100%
+  );
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.special-text div {
+  position: relative;
+  z-index: 10000000000000 !important;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(0deg, rgb(32, 34, 37), #d1d1d110) repeat-x !important;
+}
+
+.location-container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.about h4 {
+  font-size: 3.2vh;
+}
+
+.about-text {
+  background: transparent;
+  margin: 5% 0 0 0;
+}
+
+.about p {
+  font-size: 2.5vh;
+}
 .about .about-one {
   margin-left: 15%;
 }
