--- a/src/responsive.css
+++ b/src/responsive.css
@@ -174,4 +174,19 @@
     width: 100%;
     height: 100vh;
   }
+  .hero-container {
+    justify-content: center;
+  }
+
+  .hero-container img {
+    position: absolute;
+    bottom: 15%;
+    height: 40%;
+    width: 100%;
+  }
+
+  .hero-container h1:nth-child(3) {
+    top: 22% !important;
+    left: 2%;
+  }
 }
