--- a/src/App.css
+++ b/src/App.css
@@ -459,6 +459,11 @@ li {
   align-items: center;
 }
 
+#GOODIES_PAGE .close-goodies {
+  z-index: 100000000000 !important;
+  display: none;
+}
+
 .menu-container {
   position: relative;
   width: 80%;
@@ -630,7 +635,7 @@ li {
 
 .strains-footer div {
   background-color: transparent;
-  width: 100%;
+  /* width: 100%; */
   margin: 5%;
   height: auto;
   position: relative;
@@ -638,6 +643,7 @@ li {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  text-align: left;
 }
 
 .strains-footer div h3 {
