changes to components with icons and basic font structure

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ li {
 }
 
 #MAIN_HEADER div {
+  background: transparent;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -178,6 +179,7 @@ li {
 }
 
 .nav-social {
+  background: transparent;
   position: relative;
   margin: 0;
   margin-right: 2%;
@@ -290,6 +292,18 @@ li {
   justify-self: center;
 }
 
+.second-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+}
+
 .slides-bg {
   position: relative;
   background: lightgray;
@@ -317,6 +331,119 @@ li {
   background: url(./assets/images/bg-pattern.png) 0 0;
 }
 
+.slide-card div {
+  width: 100%;
+}
+
+.slide-card h1 {
+  font-size: 7vh;
+}
+
+.slide-card h2 {
+  font-size: 5vh;
+}
+
+.designs {
+  position: absolute;
+  width: 33%;
+  height: 35vh;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000000000000 !important;
+}
+
+/* ================= SLIDE CARDS 1 - Intro ================= */
+
+.first-slide .designs:nth-child(1) {
+  position: absolute;
+  top: 15%;
+  transform: rotate(-30deg);
+}
+
+.first-slide .designs:nth-child(2) {
+  position: absolute;
+  top: 65%;
+  left: 55%;
+  transform: rotate(30deg);
+}
+
+.first-slide .designs:nth-child(3) {
+  position: absolute;
+  top: 55%;
+  left: 15%;
+  transform: rotate(-10deg);
+}
+
+.first-slide .designs:nth-child(4) {
+  position: absolute;
+  top: 15%;
+  left: 75%;
+  transform: rotate(30deg);
+}
+
+.second-slide .designs:nth-child(1) {
+  position: absolute;
+  top: 15%;
+  transform: rotate(-30deg);
+}
+
+.second-slide .designs:nth-child(2) {
+  position: absolute;
+  top: 65%;
+  left: 55%;
+  transform: rotate(30deg);
+}
+
+.second-slide .designs:nth-child(2) {
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  transform: rotate(-10deg);
+  height: 50vh;
+  width: 45%;
+}
+
+.second-slide .designs:nth-child(2) img {
+  height: 60vh;
+  width: 55%;
+}
+
+.slides-bg .designs {
+  position: absolute;
+  top: auto !important;
+  bottom: 0% !important;
+  left: 0% !important;
+  transform: rotate(0deg) !important;
+  justify-content: flex-end;
+}
+
+.slides-bg .designs img {
+  transform: scaleX(-1) !important;
+}
+
+/* ================= SLIDE CARDS 2 - Product ================= */
+
+.second-slide .designs:nth-child(3) img {
+  height: 80%;
+  width: auto;
+}
+
+.second-slide .designs:nth-child(4) {
+  position: absolute;
+  top: 15%;
+  left: 75%;
+  transform: rotate(30deg);
+}
+
+.designs img {
+  width: auto;
+  background: transparent;
+  height: 60%;
+}
+
 .second-slide {
   position: relative;
   width: 100%;
@@ -329,6 +456,22 @@ li {
   justify-self: center;
 }
 
+.second-slide .text {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.second-slide .text h2,
+.second-slide .text h1 {
+  margin-right: 15%;
+}
+
+/* ================= SLIDE CARDS 3 - About ================= */
+
 .third-slide {
   position: relative;
   width: 100%;
@@ -340,6 +483,8 @@ li {
   align-self: center;
   justify-self: center;
 }
+
+/* ================= SLIDE CARDS 4 - ================= */
 
 .forth-slide {
   position: relative;
@@ -839,7 +984,7 @@ li {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: 100000000 !important;
+  z-index: 100000 !important;
   background-size: cover;
   background-color: rgb(32, 34, 37);
   background-position: center center;
