--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: "Vollkorn-Regular";
-  src: local("YoungSerif"),
+  src: local("VollkornRegular"),
     url("./assets/fonts/Vollkorn-Regular.woff") format("woff");
 }
 
@@ -84,7 +84,7 @@ html {
 
 * {
   position: relative;
-  background-color: #ffff;
+  /* background-color: #ffff; */
   text-decoration: none;
   width: auto;
   height: auto;
@@ -263,6 +263,11 @@ p {
   align-items: center;
 }
 
+#MAIN_HEADER img {
+  width: auto;
+  height: 5vh;
+}
+
 #MAIN-NAV .hamburger {
   background-color: #8dd4bd;
   margin: 0;
@@ -332,6 +337,15 @@ p {
   position: absolute;
 }
 
+.home-screen {
+  opacity: 0.7;
+  background: url(./assets/images/background/color-blend-background.png);
+}
+
+#SLIDES {
+  background: transparent;
+}
+
 .first-slide {
   position: relative;
   width: 100%;
@@ -379,8 +393,12 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  opacity: 0.4;
-  background: url(./assets/images/bg-pattern.png) 0 0;
+  opacity: 1;
+  background: url(./assets/images/background/weed\ leafs\ and\ wavy\ banner.png);
+  /* 0 0; */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .slide-card div {
@@ -409,33 +427,71 @@ p {
 
 /* ================= SLIDE CARDS 1 - Intro ================= */
 
+.first-slide .designs:nth-child(4) {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  height: 25%;
+}
+
+.first-slide .designs:nth-child(5) {
+  position: absolute;
+  top: 65%;
+  left: 55%;
+  height: 20%;
+}
+
+.first-slide .designs:nth-child(6) {
+  position: absolute;
+  top: 55%;
+  left: 15%;
+}
+
+.first-slide .designs:nth-child(7) {
+  position: absolute;
+  top: 25%;
+  left: 65%;
+  height: 20%;
+}
+
+/* CLOUD GRAPHICS */
+
 .first-slide .designs:nth-child(1) {
   position: absolute;
   top: 15%;
-  transform: perspective(1000px) rotateX(-30deg) rotateY(-30deg)
-    scale3d(1, 1, 1);
+  left: 15%;
+  opacity: 0.8;
+  height: 40%;
 }
 
 .first-slide .designs:nth-child(2) {
   position: absolute;
-  top: 65%;
-  left: 55%;
-  transform: rotate(30deg);
+  top: 55%;
+  left: 15%;
 }
 
 .first-slide .designs:nth-child(3) {
   position: absolute;
-  top: 55%;
-  left: 15%;
-  transform: rotate(-10deg);
+  top: 25%;
+  left: 75%;
 }
 
-.first-slide .designs:nth-child(4) {
+/*  */
+
+.slides-bg .designs {
   position: absolute;
-  top: 15%;
-  left: 75%;
-  transform: rotate(30deg);
+  top: auto !important;
+  bottom: 0% !important;
+  left: 0% !important;
+  transform: rotate(0deg) !important;
+  justify-content: flex-end;
 }
+
+.slides-bg .designs img {
+  transform: scaleX(-1) !important;
+}
+
+/* ================= SLIDE CARDS 2 - Product ================= */
 
 .second-slide .designs:nth-child(1) {
   position: absolute;
@@ -463,22 +519,6 @@ p {
   height: 60vh;
   width: 55%;
 }
-
-.slides-bg .designs {
-  position: absolute;
-  top: auto !important;
-  bottom: 0% !important;
-  left: 0% !important;
-  transform: rotate(0deg) !important;
-  justify-content: flex-end;
-}
-
-.slides-bg .designs img {
-  transform: scaleX(-1) !important;
-}
-
-/* ================= SLIDE CARDS 2 - Product ================= */
-
 .second-slide .designs:nth-child(3) img {
   height: 80%;
   width: auto;
@@ -1022,7 +1062,16 @@ p {
 }
 
 .about {
-  background: linear-gradient(to right, #f4f2f1, rgb(97, 97, 97));
+  background: linear-gradient(to right, #ffff, rgb(97, 97, 97));
+}
+
+#ABOUT_PAGE h1,
+.about h2,
+.about h3,
+.about h4,
+.about h5,
+.about p {
+  background: transparent;
 }
 
 .about div {
@@ -1121,4 +1170,19 @@ p {
 
 .about .about-three {
   margin-right: 15%;
+}
+
+/* ======================================= 
+
+   ======================================= */
+#LOADING {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
