--- a/src/responsive.css
+++ b/src/responsive.css
@@ -17,7 +17,7 @@
     /* top: 50%; */
     left: 50%;
     /* transform: translate(-50%, -50%); */
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,7 +26,8 @@
 
   #MOBILE_NAV .logo {
     background-color: #8dd4bd !important;
-    position: relative;
+    position: absolute;
+    top: 0;
     /* margin: 5% 0; */
     padding: 0px 0 17px 0;
     width: 40vw;
@@ -44,7 +45,9 @@
 
   #MOBILE_NAV .hamburger {
     background-color: #8dd4bd !important;
-    position: relative;
+
+    position: absolute;
+    bottom: 0;
     /* margin: 5% 0; */
     padding: 17px 0 0 0;
     width: 40vw;
@@ -60,19 +63,41 @@
     color: lavender;
   }
 
+  .mobile-menu h1,
+  .mobile-menu a,
+  .mobile-menu p {
+    color: lavender;
+  }
+
   .mobile-menu {
     z-index: 10000000000000;
-    background-color: #fff;
     position: relative;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100vh;
+    opacity: 0.99;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-color: #222;
   }
+  .mobile-menu-container {
+    /* z-index: 10000000000001; */
+    opacity: 0.1;
+    background-color: #222;
+    background-image: url(./assets/images/background/orange-leaf-pattern.png) !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    position: absolute !important;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+
   .mobile-menu-header {
     width: 100%;
     display: flex;
@@ -83,6 +108,14 @@
 
   .mobile-menu-header .logo {
     padding: 10% 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start !important;
+    align-items: flex-start !important;
+  }
+
+  .mobile-menu-header .logo img {
+    height: 8vh !important;
   }
 
   .mobile-menu-body {
@@ -139,6 +172,10 @@
 
   .mobile-menu-header .close {
     padding: 10% 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end !important;
+    align-items: flex-end !important;
   }
 
   .footer-nav {
@@ -149,6 +186,10 @@
   }
   #SLIDES {
     z-index: 1000;
+  }
+
+  .slide-card h2 {
+    font-size: 4vh;
   }
 
   .slide-card {
@@ -183,6 +224,7 @@
     width: 100%;
     height: 100vh;
   }
+
   .hero-container {
     justify-content: center;
   }
@@ -210,6 +252,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #8dd4bd;
+    border-style: none;
+    box-shadow: 1px -1px 19px 5px rgb(204 199 199);
+    font-family: "Young-Serif-Regular";
+    color: #fff;
+    font-size: 4vh;
   }
 
   /* ABOUT PAGE */
