--- a/src/App.css
+++ b/src/App.css
@@ -257,7 +257,7 @@ p {
   margin: 0;
   padding: 0;
   width: 20%;
-  height: 5vh;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -273,8 +273,9 @@ p {
   margin: 0;
   padding: 0;
   width: 20%;
-  height: 5vh;
+  height: 10vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -1308,4 +1309,73 @@ p {
   justify-content: center;
   align-items: center;
   background-color: #222222;
+}
+
+/* =======================================
+/* 6. TEAM PAGE
+/* ======================================= */
+#SPLASH {
+  /* height: 100%; */
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #222222;
+  overflow: scroll;
+}
+
+#SPLASH h1 {
+}
+
+#SPLASH .main {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #222222;
+}
+
+#SPLASH .main .container {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #222222;
+}
+
+#SPLASH .button-nav {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: transparent;
+}
+
+#SPLASH .button-nav a {
+  height: 90%;
+  width: 90%;
+  box-shadow: 1px -1px 19px 5px rgb(204 199 199);
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
