--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,22 @@ p {
   font-family: "Vollkorn-Regular";
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+span,
+li,
+a,
+button {
+  text-decoration: none;
+  list-style: none;
+  text-decoration-style: none;
+  color: rgb(97, 97, 97);
+}
+
 /* =======================================
 /* 2. NAV
 /* ======================================= */
@@ -1164,6 +1180,31 @@ p {
   overflow: hidden;
 }
 
+#background-video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  /* z-index: -1; */
+}
+
+.bg-img {
+  background-image: url(https://lh3.googleusercontent.com/kLdTAW-dJJRbOLuP0xNjGZMkEDFtgf8h05q6pNcYu4ias6pNA9TB64D_gJksaMiN3rP5_VQ5IVveGdrLQI9Fr2Gx6WE0DVoYpKxq94U=s250);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 90%;
+  position: absolute;
+  background-size: cover;
+  background-color: rgb(32, 34, 37);
+  background-position: center center;
+  opacity: 0.3;
+  filter: blur(8px);
+  overflow: hidden;
+  z-index: 0;
+  -webkit-mask: linear-gradient(rgb(255, 255, 255), transparent);
+}
+
 .location {
   position: relative;
   background: rgb(32, 34, 37);
@@ -1266,7 +1307,7 @@ p {
 }
 
 /* =======================================
-/* 6. TEAM PAGE
+/* 8. TEAM PAGE
 /* ======================================= */
 #TEAM {
   /* height: 100%; */
@@ -1312,7 +1353,7 @@ p {
 }
 
 /* =======================================
-/* 6. TEAM PAGE
+/* 9. SPLASH PAGE
 /* ======================================= */
 #SPLASH {
   /* height: 100%; */
@@ -1324,7 +1365,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: #222222;
+  /* background-color: #222222; */
   overflow: scroll;
 }
 
@@ -1341,7 +1382,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #222222;
+  /* background-color: #222222; */
 }
 
 #SPLASH .main .container {
@@ -1354,7 +1395,7 @@ p {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: #222222;
+  /* background-color: #222222; */
 }
 
 #SPLASH .button-nav {
@@ -1379,3 +1420,7 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+/* =======================================
+/* 10. New Patient PAGE
+/* ======================================= */
