--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,11 @@ button {
   padding: 0;
 }
 
+a,
+button {
+  cursor: pointer;
+}
+
 ul {
   text-decoration: none;
   list-style-type: none;
@@ -218,7 +223,13 @@ button {
 }
 
 .nav-tabs a {
-  color: #f7941d;
+  color: #222222;
+}
+
+.nav-tabs .active {
+  color: #8dd4bd;
+  opacity: 1;
+  transition: "opacity 0.5s";
 }
 
 .nav-tabs div {
@@ -228,7 +239,9 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid #1f8061;
+  overflow: hidden;
+  /* transform: scale(0.8); */
 }
 
 .nav-social {
@@ -848,7 +861,7 @@ button {
   border-radius: 10px;
 }
 
-#FLOWERS > div {
+/* #FLOWERS > div {
   position: relative;
   width: 100%;
   height: 60%;
@@ -862,11 +875,11 @@ button {
   color: white;
   box-sizing: border-box;
   overflow: visible;
-}
+} */
 
 /* STRAIN COMPONENT*/
-
-#FLOWERS .strains {
+/* POSSIBLE FIX back to .strain && Remove "NAVLINK" on Flower.js  */
+#FLOWERS a {
   background-color: transparent;
   position: relative;
   width: 100% !important;
@@ -886,20 +899,31 @@ button {
   border: 1px solid aliceblue;
 }
 
-#FLOWERS .strains h1 {
-  background: #dfe5ea;
+#FLOWERS .strains {
+  background-color: transparent;
+  position: relative;
+  width: 100% !important;
+  height: 100% !important;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  background-color: transparent;
+  color: white;
+  box-sizing: border-box;
+  overflow: hidden;
+  border: 1px solid aliceblue;
 }
 
-#FLOWERS .strains h3 {
+#FLOWERS h1,
+#FLOWERS h3,
+#FLOWERS span,
+#FLOWERS p {
   background: #dfe5ea;
-}
-
-#FLOWERS .strains span {
-  background: #dfe5ea;
-}
-
-#FLOWERS .strains p {
-  background: #dfe5ea;
+  color: rgb(165, 163, 163);
 }
 
 #FLOWERS .strains:hover h1 {
@@ -1123,6 +1147,7 @@ button {
   width: 100%;
   margin: 0;
   padding: 0;
+  background-color: #fff;
 }
 
 .hero-container {
