--- a/src/responsive.css
+++ b/src/responsive.css
@@ -227,6 +227,10 @@
     height: 100vh;
   }
 
+  .menu-card h1 {
+    font-size: 2.3vh;
+  }
+
   .hero-container {
     justify-content: center;
   }
